# crewAI-Banking-Automation

./: .gitignore  CLAUDE.md  CREWAI_TUTORIAL.md  LICENSE  README.md
Alpine/: README.md
Alpine-Automation/: README.md
Alpine-Flows/Email_Auto_Responder_Flow/: README.md
Alpine-Flows/Lead_Score_Flow/: README.md
Alpine-Flows/Meeting_Assistant_Flow/: README.md
Alpine/Human-Resources-Department/Banking_Recruitment_Automation/: README.md
Alpine/Human-Resources-Department/Corporate_Travel_Planner/: README.md
Alpine/Human-Resources-Department/Employer_Branding_Automation/: README.md
Alpine/Human-Resources-Department/Job_Application_Booster/: Job_Application_Booster.ipynb
Alpine/Human-Resources-Department/Job_Posting_Generator/: README.md
Alpine/Human-Resources-Department/Professional_Social_Media_Content/: README.md  agents.py  tasks.py
Alpine/Human-Resources-Department/Resume_Job_Matcher/: README.md  pyproject.toml
Alpine/Human-Resources-Department/Resume_Job_Matcher/src/resume_job_matcher/: crew.py  main.py
Alpine/Human-Resources-Department/Resume_Job_Matcher/src/resume_job_matcher/data/: cv.md
Alpine/Human-Resources-Department/Training_Video_Script_Generator/: README.md  (+1 more)
alpine-bank-automation/: README.md
training/Customer_Outreach_Campaign/: Customer_Outreach_Campaign.ipynb
training/Customer_Support_Automation/:  Customer Support Automation.ipynb
training/Event_Planning_Automation/: Event_Planning_Automation.ipynb
training/Financial_Analysis/: Financial_Analysis.ipynb
training/Job_Application_Booster/: Job_Application_Booster.ipynb
(+14 files in other folders)
